--- a/src/components/Cube/Cube.module.css
+++ b/src/components/Cube/Cube.module.css
@@ -44,34 +44,33 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    border: 1px solid black;
-    /* box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.38); */
+    box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
     /* -webkit-box-reflect: below 0 -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(50%, transparent), to(RGBA(0, 0, 0, 0.1))); */
 }
 /* позиции сторон */
 .front {
     transform: translateZ(10em);
-    background-color: rgb(191, 194, 197);
+    background: linear-gradient(#9da09d, #C0C0C0);
 }
 .back {
     transform: rotateY(180deg) translateZ(10em);
-    background-color: rgb(191, 194, 197);
+    background: linear-gradient(#9da09d, #C0C0C0);
 }
 .right {
     transform: rotateY(90deg) translateZ(10em);
-    background-color: rgb(191, 194, 197);
+    background: linear-gradient(#9da09d, #C0C0C0);
 }
 .left {
     transform: rotateY(-90deg) translateZ(10em);
-    background-color: rgb(191, 194, 197);
+    background: linear-gradient(#9da09d, #C0C0C0);
 }
 .top {
     transform: rotateX(90deg) translateZ(10em);
-    background-color: rgb(191, 194, 197);
+    background: linear-gradient(#9da09d, #C0C0C0);
 }
 .bottom {
     transform: rotateX(-90deg) translateZ(10em);
-    background-color: rgb(191, 194, 197);
+    background: linear-gradient(#9da09d, #C0C0C0);
 }
 
 /*текущее положение в зависимости от параметров роутера*/
