--- a/src/components/Cube/Cube.module.css
+++ b/src/components/Cube/Cube.module.css
@@ -44,8 +44,8 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    border: 1px solid #9da09d;
     box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
-    /* -webkit-box-reflect: below 0 -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(50%, transparent), to(RGBA(0, 0, 0, 0.1))); */
 }
 /* позиции сторон */
 .front {
