--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
   --side-3d: 0;
-  --size: 45px;
+  --scale-3d: 1, 1, 1;
+  --window-height: 500px;
 }
 
 html, body {
@@ -8,7 +9,7 @@ html, body {
   padding: 0;
   height: 100%;
   box-sizing: border-box;
-  font-size: var(--size);
+  font-size: 16px;
 }
 
 body {
@@ -35,10 +36,4 @@ code {
 
 .width100 {
   width: 100%;
-}
-
-.ant-btn {
-  height: 2em;
-  padding: .1em .1em;
-  border-radius: .5em;
 }
