--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
-  --side-3d: 0;
-  --scale-3d: 1, 1, 1;
+  --current-turn: 0;
+  --scale-cube: 1, 1, 1;
   --window-width: 500px;
   --window-height: 500px;
 }
