--- a/src/components/Auth/Auth.module.css
+++ b/src/components/Auth/Auth.module.css
@@ -5,7 +5,7 @@
 
 .actionWrapper {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
 }
 
 .actionWrapper button:nth-child(1) {
@@ -14,6 +14,6 @@
 
 .signUpWrapper {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     margin-top: 24px;
 }
