--- a/src/components/Chat/Messages/Messages.module.css
+++ b/src/components/Chat/Messages/Messages.module.css
@@ -1,6 +1,16 @@
 .wrapper {
   width: 100%;
-  height: 100%;
-  flex: 4;
+  /* flex: 20; */
   overflow: auto;
+  /* display: flex;
+  flex-direction: column;
+  align-items: flex-start; */
+}
+
+.title {
+  text-align: left;
+}
+
+.description {
+  text-align: left;
 }
