--- a/src/components/Chat/Rooms/Rooms.module.css
+++ b/src/components/Chat/Rooms/Rooms.module.css
@@ -2,6 +2,9 @@
   width: 100%;
   height: 100%;
   flex: 1;
+  -webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
 }
 
 .container {
@@ -16,11 +19,11 @@
   display: flex;
   align-items: center;
   padding: 10px;
-  border-radius: 10px;
+  border-radius: 10px 0 0 10px;
 }
 
 .iconWithTitle:hover {
-  background-color: rgb(24, 144, 255);
+  background-color: rgba(34, 60, 80, 0.2);
   cursor: pointer;
 }
 
@@ -29,5 +32,5 @@
 }
 
 .plus {
-  font-size: 32px;
+  font-size: 38px;
 }
