--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@ html, body {
   overflow: hidden;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
