--- a/src/components/Chat/Messages/Messages.module.css
+++ b/src/components/Chat/Messages/Messages.module.css
@@ -1,10 +1,7 @@
 .wrapper {
   width: 100%;
-  /* flex: 20; */
   overflow: auto;
-  /* display: flex;
-  flex-direction: column;
-  align-items: flex-start; */
+  height: 100%;
 }
 
 .title {
@@ -13,4 +10,22 @@
 
 .description {
   text-align: left;
+}
+
+.joinMessage {
+  text-align: center;
+}
+
+.icon {
+  margin-right: 5px;
+}
+
+.flexContainer {
+  display: flex;
+  align-items: center;
+}
+
+.message {
+  text-align: left;
+  margin-left: 35px;
 }
